[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Susuwatariâ€™s Big Escape.png" type="Texture" id=1]
[ext_resource path="res://LandingPage.gd" type="Script" id=2]
[ext_resource path="res://assets/htpbutton.png" type="Texture" id=3]
[ext_resource path="res://assets/DirectionPanel.png" type="Texture" id=4]
[ext_resource path="res://assets/xbutton.png" type="Texture" id=5]
[ext_resource path="res://assets/Audio Asset/capybara drop.mp3" type="AudioStream" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 500, 500 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 500, 500 )

[node name="LandingPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -32.0
margin_top = 2.0
margin_right = 1056.0
margin_bottom = 602.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 464.0
margin_top = 504.0
margin_right = 618.0
margin_bottom = 518.0
text = "Press Anywhere To Start"

[node name="htpButton" type="Button" parent="TextureButton"]
margin_left = 1004.0
margin_top = 21.0
margin_right = 1055.0
margin_bottom = 70.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="DirectionPanel" type="TextureRect" parent="TextureButton/htpButton"]
margin_left = -762.0
margin_top = 151.0
margin_right = -155.0
margin_bottom = 382.0
texture = ExtResource( 4 )
expand = true

[node name="XButton" type="Button" parent="TextureButton/htpButton"]
margin_left = -189.0
margin_top = 134.0
margin_right = -146.0
margin_bottom = 178.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 3.496
